--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "dependencies": {
     "bluebird": "^3.5.2",
     "body-parser": "~1.17.1",
+    "connect-flash": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
     "jade": "~1.11.0",
+    "moment": "*",
     "morgan": "~1.8.1",
     "pg-promise": "^5.9.7",
     "serve-favicon": "~2.4.2"
