--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "morgan": "~1.8.1",
     "pg-promise": "^5.9.7",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0"
   }
 }
