--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "connect-flash": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
@@ -16,6 +17,8 @@
     "express-session": "*",
     "express-validator": "*",
     "jade": "~1.11.0",
+    "jquery": "^3.3.1",
+    "jsdom": "^12.2.0",
     "moment": "*",
     "morgan": "^1.9.1",
     "pg-promise": "^5.9.7",
